--- a/dictcc.cabal
+++ b/dictcc.cabal
@@ -19,6 +19,6 @@ executable dictcc
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.9, text >=1.2 && <1.3, HTTP >=4000.2 && <4000.3, http-conduit >=2.1 && <2.2, html-conduit >=1.2 && <1.3, xml-conduit >=1.3 && <1.4
+  build-depends:       base >=4.8 && <4.9, text >=1.2 && <1.3, HTTP >=4000.2 && <4000.3, http-conduit >=2.1 && <2.2, html-conduit >=1.2 && <1.3, xml-conduit >=1.3 && <1.4, base-unicode-symbols
   hs-source-dirs:      src
   default-language:    Haskell2010
