--- a/dictcc.cabal
+++ b/dictcc.cabal
@@ -14,11 +14,31 @@ category:            Web
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
+tested-with:         GHC >= 7.8 && <= 7.10.2
+
+library
+  exposed-modules:
+    DictCC
+    DictCC.Util
+  build-depends:
+      base >=4.6 && <5.0
+    , text
+    , HTTP
+    , http-conduit
+    , html-conduit
+    , xml-conduit
+  hs-source-dirs:      lib
+  default-language:    Haskell2010
+  ghc-options: -Wall
+
 
 executable dictcc
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.9, text >=1.2 && <1.3, HTTP >=4000.2 && <4000.3, http-conduit >=2.1 && <2.2, html-conduit >=1.2 && <1.3, xml-conduit >=1.3 && <1.4, base-unicode-symbols
-  hs-source-dirs:      src
+  build-depends:
+      base >=4.6 && <5.0
+    , dictcc
+  hs-source-dirs:      app
   default-language:    Haskell2010
+  ghc-options: -Wall
