--- a/dictcc.cabal
+++ b/dictcc.cabal
@@ -3,13 +3,13 @@
 
 name:                dictcc
 version:             0.1.0.0
--- synopsis:
--- description:
+synopsis:            Translate with dict.cc directly from the command line
+description:         See the Readme.md
 license:             BSD3
 license-file:        LICENSE
 author:              Justus Adam
 maintainer:          dev@justus.science
--- copyright:
+copyright:           2015, 2016 Justus Adam
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
@@ -44,3 +44,9 @@ executable dictcc
   hs-source-dirs:      app
   default-language:    Haskell2010
   ghc-options: -Wall
+
+
+source-repository this
+  type: git
+  location: git://github.com/JustusAdam/dictcc.git
+  
